Fixes dropshadow of header not being visible on home screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@ app-electron-controls{
 app-header{
     position: relative;
     float: left;
+    z-index: 99;
 }
 
 #gp_main_content{
