--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -347,7 +347,7 @@
     width: 100%;
     float: left;
     background-color: var(--text-color);
-    z-index: 90;
+    z-index: 10;
 
     #gp-home-real-content-top{
         width: 0;
